<resources>
    <string name="app_name">Lecce Tour Guide</string>
    <string name="category_place">Places</string>
    <string name="category_see">To see</string>
    <string name="category_event">Events</string>
    <string name="category_food">Food</string>
    <string name="category_product">Product</string>
    <string name="details_site">Details Site</string>
    <string name="map">Map</string>
    <string name="services">Services</string>
    <string name="website">Website</string>
    <string name="text_name">Name of place</string>
    <string name="text_desc">Description of place</string>
    <string name="card_favorite">Favorite icon</string>
    <string name="card_bookmark">Bookmark icon</string>
    <string name="card_share">share icon</string>
    <string name="image_place">Image of place</string>
    <string name="card_star">share icon</string>
    <string name="place_must_museum_name">MUST Museum</string>
    <string name="place_must_museum_desc">The MUST museum is dedicated to local history and art. The entrance is free. The MUST building was originally a monastery for the Order of Saint Clare. Since 1866, it is no longer a monastery. In the years, the building underwent several renewals.  </string>
    <string name="place_must_museum_coord">18.171007, 40.351927</string>
    <string name="place_saint_oronzo_square_name">Saint Oronzo Square</string>
    <string name="place_saint_oronzo_square_desc">Piazza Sant\'Oronzo is one of the most important squares of Lecce. The square has several precious monuments built over the centuries, that produce an interesting mix of styles. In the past Piazza Sant\'Oronzo had a very different appererance. In particular until the beginning of the XX century, the space of the Roman Amphitheatre was occupied by workshops and merchant stands. Following the discovery and the subsequent archaeological excavations, those small facilities were demolished to bring the ancient amphitheatre to light. The column with the statue of Sant’Oronzo, protector of the city, also stands in the square. In front of the statue the visitor may notice the harmonious building of the Sedile, the ancient seat of the Town Hall. Next to the Sedile , stands the church of San Marco , important evidence of the existence of a colony of Venetian merchants.</string>
    <string name="place_saint_oronzo_square_coord">18.172574, 40.353185</string>
    <string name="place_villa_comunale_name">Villa Comunale</string>
    <string name="place_villa_comunale_desc">The Villa Comunale is the main urban park of Lecce. Completed towards the end of the nineteenth century, its realization is due to one of the most famous doctors of the city, Gaetano Stella, in honour of Giuseppe Garibaldi. It is also called \"Villa Garibaldi\", due to the presence of the bust of Giuseppe Garibaldi, and \"Villa della Lupa\" due to the presence, in the past, of some specimens of wolf locked up in a cage (the wolf is, moreover, a symbol of the city of Lecce, called by the Romans Lupiae). Its total area is about 34,000 square meters. It has an irregular plan, is surrounded by a fence wall and is characterized by an Italian garden with regular geometric shape, originated as \"cruxviarum\", since it was originally crossed and divided into four sections by two large suburban avenues. The vegetation in the garden is full of old trees. Among the tree species there are: pine, palm, poplar, willow, mimosa, araucaria, acacia, black locust, Judas tree, cypress, cedar, eucalyptus and a specimen of firmiana simplex. Among the shrub species: agave, yucca and phytolacca dioica.</string>
    <string name="place_villa_comunale_coord">18.174893, 40.355219</string>
    <string name="place_villa_bray_name">Villa Bray</string>
    <string name="place_villa_bray_desc">Villa Martini, today’s Villa Bray, is located near the city walls of the sixteenth century, along the modern Viale F. Lo Re. It is a building with moresca architecture’s features. Its peculiar stylistic elements are yellow and red horizontal stripes that wrap completely the villa, the battlements, horseshoe-shaped arches, the smallest decorative elements including two Arabic inscriptions, which occur along the sides of the building. These inscriptions are taken from the Koran, which celebrate Mohammed: “And there is no other God except Allah”. The main front aligned with the ancient circuit of the city walls and the villa has two entrances: the main and external on the Viale F. Lo Re, the secondary and external on the old city side. The garden is just in front of the main façade and it is not surrounding the residence on all sides. The private space in front of the residence is enclosed by a system of symmetrical ramps on both sides, with underlying accessories places, which form a continuous path from the street level to the balcony with shelves; the two ramps connecting on the first floor of the villa by a long and narrow terrace overlooking the courtyard. On both sides, they are in part supported by two small bridges (currently closed for the division of the property): in fact, senator Tommaso Martini, the customer of the villa, bought also the two smaller lands lining the building. In this way, he was in direct communication with his dépendances (a house for his daughter, currently Villino Nuzzaci-Sansonetti, and an unfulfilled coffee house), by bridges arches, without affecting the unitary image of the main block. </string>
    <string name="place_villa_bray_coord">18.172227, 40.349054</string>
    <string name="place_post_and_telecommunications_palace_name">Post and Telecommunications Palace</string>
    <string name="place_post_and_telecommunications_palace_desc">The Post and Telecommunications Palace lies along the eastern side of Piazza Giuseppe Libertini and was designed in “Baroque” style by engineers Andrea Gatto and Giuseppe Mantovano. It was opened on 28 October 1927, in the fifth anniversary of the March on Rome by Fascists. The pose of first stone (2 December 1922), by Umberto of Savoia, had taken place in 1914 even though a ministerial decree prohibiting any construction, even temporary, on the square, in order to ensure the view of the only open side of the Castle of Carlo V. The main façade of the building looks towards Piazza Libertini and is characterized by two balconies that are on the top of the entrances and were used for public conferences during Fascist period. The building is still the seat of the Post Office.</string>
    <string name="place_post_and_telecommunications_palace_coord"> 18.173778, 40.353222</string>
    <string name="place_palazzo_adorno_name">Palazzo Adorno</string>
    <string name="place_palazzo_adorno_desc">The façade of Palazzo Adorno is entirely in plain bossage. The atrium walls are in diamond-shaped bossage. The Palace today houses local government offices. For this reason, the atrium, and the courtyard, are the only spaces open to the visit. Gabriele Adorno, general of the Emperor Carlo Quinto, commissioned and paid the construction of this notable building. It was completed in 1568 on a design likely due to Gabriele Riccardi, the famous local architect.</string>
    <string name="place_palazzo_adorno_coord">18.172638,  40.356279</string>
    <string name="place_hypogeum_palmieri_name">Hypogeum Palmieri</string>
    <string name="place_hypogeum_palmieri_desc">The Hypogeum Palmieri is a funerary crypt. It was used from the fourth to the second century BC by a powerful family of the ancient population of the area: the Messapi . The tomb is very sumptuous for the period and this can be seen in both dimension and decorations. A staircase of 16 steps gives access to a vestibule and from this to three squared rooms. On the lower area, the walls were plastered and painted with horizontal bands of red and brown. The upper area had a stucco decoration. Traces of the original red color painting can still be seen along the staircase and the vestibule. A bas-relief with a sequence of scenes of combat is visible along the entrance staircase . The access doors to the three rooms are decorated with profiles supported by Doric pilasters. The ipogeo, was accidentally discovered during the seventeenth century by the owners of Palazzo Palmieri , a private Building in the historic center of the city. The area is still a private property, and hence the Hypogeum can be visited only by contacting the owners.</string>
    <string name="place_hypogeum_palmieri_coord">18.168461, 40.354371</string>
    <string name="place_obelisk_name">Obelisk</string>
    <string name="place_obelisk_desc">The Obelisk is located in front of Porta Napoli, at the intersection between Viale degli Studenti and Via Taranto (the final stretch of the road that reached Lecce from the capital of the Kingdom of Two Sicilies). The Obelisk, designed by Luigi Cipolla, was built in 1822 by the sculptor Vito Carluccio (from Muro Leccese), in honor of Ferdinand I of Bourbon. The location of the monument was pounded away by the Decurionato of the City, which in 1824 invited the Provincial Deputation to move it in another place. Moreover, the obelisk was painted in black from Bourbons, but the first rain had erased any trace of colour. The Obelisk, made of local calcareous stone, about ten meters high, stands on a large base with steps and on a parallelepiped base. The four sides of the monument are decorated with bas-reliefs depicting the coats of arms and the mythical stories of the four districts of the ancient province of Terra d’Otranto: Brindisi, Gallipoli, Lecce and Taranto, which are a rooster, a scorpion, a deer and a wolf. Instead, the lion with 27 stars alludes to the zodiac of the same province. The provincial emblem is present on the base; it is a dolphin biting a crescent, which symbolizes the victory over the Turks. On the structure there are also several Latin inscriptions that concern the various places represented and their distances. A long inscription refers to the visit of Ferdinand I, which represented a very important historical for Lecce.</string>
    <string name="place_obelisk_coord">18.167206, 40.356859</string>
    <string name="place_diocesan_museum_name">Diocesan Museum</string>
    <string name="place_diocesan_museum_desc">The Diocesan Museum of Lecce is located in the building of the Seminary, in Piazza Duomo. It features a collection of paintings, sculptures, and liturgical vestments that reconstruct the artistic history of the Diocesi of Lecce. The paintings range from the late fifteenth century to the end of the eighteenth century. Visit the Museum\n- Winter time : Tuesday to Saturday from 09.30 to 12.30 ; from 16.00 to 19.00. Open Sundays by appointment only\n- Summer time : Tuesday to Saturday from 09.30 to 12.30 from 17.00 to 20:00. Open Sundays by appointment only\nAdmission fee with discounts for groups , seniors, children:\n€ 1.00 per visit limited to the ground floor : cloister , chapel\n€ 4.00 for the visit to be made also to the Diocesan Museum , which exhibits vestments, silverware , paintings.</string>
    <string name="place_diocesan_museum_coord">18.168464, 40.352079</string>
    <string name="see_monastery_olivetani_name">Monastery Olivetani</string>
    <string name="see_monastery_olivetani_desc"> This imposing monastery was built originally for the order of the Benedettini Neri . In 1494, the monastery was given to the new order of the Benedettini di Monte Oliveto . Around that time, the building was gradually renewed.The beautiful columned courtyard, with its magnificent baldachin shaped well, due to Gabriele Riccardi, dates back to 1559, but the external facade with its large stairs was realised during the XVIII century. </string>
    <string name="see_monastery_olivetani_coord">18.16569, 40.362157</string>
    <string name="see_roman_theatre_name">Roman Theatre</string>
</resources>