<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"

    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        style="@style/LayoutCardView"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_place"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp"
                android:background="@drawable/scrim_image_list"
                />

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/image"
                android:layout_margin="@dimen/card_name_margin"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:padding="@dimen/card_button_margin">
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stepSize="0.25"
                    style="?android:attr/ratingBarStyleIndicator"
                    />

                <ImageView
                    android:id="@+id/img_main_card2_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_share_black_24dp"
                    android:contentDescription="@string/card_share"/>

                <ImageView
                    android:id="@+id/img_main_card2_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/img_main_card2_share"
                    android:layout_toLeftOf="@id/img_main_card2_share"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_bookmark_border_black_24dp"
                    android:contentDescription="@string/card_bookmark"/>

                <ImageView
                    android:id="@+id/img_main_card2_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/img_main_card2_bookmark"
                    android:layout_toLeftOf="@id/img_main_card2_share"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="8dp"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:contentDescription="@string/card_favorite"/>
            </RelativeLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>